polish the nav and give spacing for pages to avoid hiding behind bottom nav

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,4 +1,4 @@
 .modal-dark {
-  background: #020202;
-  box-shadow: 0 0 16px #09898b;
+  background: #282c33;
+  box-shadow: 0 0 16px $blue;
 }
